[gd_scene load_steps=4 format=3 uid="uid://cqhnj2hr8356s"]

[ext_resource type="Script" path="res://pause.gd" id="1_kmctw"]
[ext_resource type="FontFile" uid="uid://0xm5p4pi8rw0" path="res://alagard.ttf" id="2_hr8ao"]
[ext_resource type="AudioStream" uid="uid://ciw471xl7tbwr" path="res://menu.wav" id="3_nrw0f"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
offset_right = 1984.0
offset_bottom = 1112.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_kmctw")

[node name="MarginContainer" type="MarginContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -295.0
offset_top = -422.0
offset_right = 273.0
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
process_mode = 3
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hr8ao")
theme_override_font_sizes/font_size = 64
text = "Continuar
"

[node name="Fullscreen" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hr8ao")
theme_override_font_sizes/font_size = 64
text = "Pantalla completa"

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hr8ao")
theme_override_font_sizes/font_size = 64
text = "Menu
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_nrw0f")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
